statum-macros/tests/ui/invalid_machine_generic_not_first.rs
extern crate statum;
use statum::{machine, state};

#[state]
enum FooState {
    Start,
}

#[machine]
struct BadMachine<T, FooState> {
    value: T,
}
